Update docu for the IxComponent

--- a/src/integrations/integration.blazor/Shared/NavMenu.razor
+++ b/src/integrations/integration.blazor/Shared/NavMenu.razor
@@ -28,13 +28,13 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="IxCoreComponent">
-                <span class="oi oi-plus" aria-hidden="true"></span> IxCore.IxComponent
+            <NavLink class="nav-link" href="IxCoreComponentExample">
+                <span class="oi oi-plus" aria-hidden="true"></span> IxComponentExample
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="IxCoreComponentExamples">
-                <span class="oi oi-plus" aria-hidden="true"></span> IxCore.IxComponent.Examples
+            <NavLink class="nav-link" href="IxCoreComponentHeaderOnlyExample">
+                <span class="oi oi-plus" aria-hidden="true"></span> IxComponentHeaderOnlyExample
             </NavLink>
         </div>
         <div class="nav-item px-3">
