--- a/src/integrations/integration.blazor/Shared/NavMenu.razor
+++ b/src/integrations/integration.blazor/Shared/NavMenu.razor
@@ -28,6 +28,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="IxCoreRemoteTask">
+                <span class="oi oi-plus" aria-hidden="true"></span> IxCore.IxRemoteTask
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="IxCoreComponentExample">
                 <span class="oi oi-plus" aria-hidden="true"></span> IxComponentExample
             </NavLink>
