experimenting with ix data, wip

--- a/src/integrations/integration.blazor/_Imports.razor
+++ b/src/integrations/integration.blazor/_Imports.razor
@@ -9,3 +9,5 @@
 @using integration.blazor
 @using integration.blazor.Shared
 @using Ix.Presentation.Blazor.Controls.RenderableContent
+@using intergrations
+@using ix.framework.core;
