--- a/src/integrations/integration.blazor/Shared/NavMenu.razor
+++ b/src/integrations/integration.blazor/Shared/NavMenu.razor
@@ -47,6 +47,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> IxCore.IxSequencer
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="ixdata">
+                <span class="oi oi-plus" aria-hidden="true"></span> IxData.Data
+            </NavLink>
+        </div>
     </nav>
 </div>
 
