Concept for Toaster

--- a/src/integrations/integration.blazor/Shared/MainLayout.razor
+++ b/src/integrations/integration.blazor/Shared/MainLayout.razor
@@ -15,5 +15,7 @@
         <article class="content px-4">
             @Body
         </article>
+
+        <ix.framework.core.blazor.Toaster.Toaster />
     </main>
 </div>
