experimenting with ix data, wip

--- a/src/core/src/ix.framework.core.blazor/Toaster/Toaster.razor
+++ b/src/core/src/ix.framework.core.blazor/Toaster/Toaster.razor
@@ -41,6 +41,8 @@
     </div>
 }
 
+<hr class="border border-danger border-2">
+<h1 class="mx-5 text-danger">TOASTER</h1>
 <div class="p-5">
     <form @onsubmit="() => AddToast()">
         <div class="mb-3">
