adds probers and scaffolds integration testing for dataexchage

--- a/src/integrations/integration.blazor/Pages/IxData/IxDataRemote.razor
+++ b/src/integrations/integration.blazor/Pages/IxData/IxDataRemote.razor
@@ -1,7 +1,8 @@
 ﻿@page "/IxDataRemote"
 <h3>IxData</h3>
 
-<RenderableContentControl Context="Entry.Plc.MainContext.process_data_manager_remote_exec" Presentation="Command-Control"></RenderableContentControl>
+@*<RenderableContentControl Context="Entry.Plc.MainContext.process_data_manager_remote_exec" Presentation="Command-Control"></RenderableContentControl>*@
+<RenderableContentControl Context="Entry.Plc.Integrations.DataExchangeTestsContext" Presentation="Control"></RenderableContentControl>
 @code {
 
 }
