--- a/src/integrations/integration.blazor/Pages/IxData/IxData.razor
+++ b/src/integrations/integration.blazor/Pages/IxData/IxData.razor
@@ -6,6 +6,8 @@
 
 
 <RenderableContentControl Context="Entry.Plc.process_data_manager" Presentation="Base"></RenderableContentControl>
+
+<RenderableContentControl Context="Entry.Plc.process_data_manager" Presentation="Command-Control"></RenderableContentControl>
 @code {
 
 }
