--- a/src/integrations/integration.blazor/Pages/IxData/IxData.razor
+++ b/src/integrations/integration.blazor/Pages/IxData/IxData.razor
@@ -5,9 +5,9 @@
 
 
 
-<RenderableContentControl Context="Entry.Plc.process_data_manager" Presentation="Base"></RenderableContentControl>
+<RenderableContentControl Context="Entry.Plc.MainContext.process_data_manager" Presentation="Base"></RenderableContentControl>
 
-<RenderableContentControl Context="Entry.Plc.process_data_manager" Presentation="Command-Control"></RenderableContentControl>
+<RenderableContentControl Context="Entry.Plc.MainContext.process_data_manager" Presentation="Command-Control"></RenderableContentControl>
 @code {
 
 }
