Working buttons in ViewModel

--- a/src/data/src/ix.framework.data.blazor/Views/IxDataView.razor
+++ b/src/data/src/ix.framework.data.blazor/Views/IxDataView.razor
@@ -14,10 +14,11 @@ else
     <div class="d-flex">
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createModal">Create</button>
         <div class="dropdown d-flex ms-auto">
-            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Exact match</button>
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">@Vm.SearchMode</button>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item active">Exact match</a></li>
-                <li><a class="dropdown-item">Match</a></li>
+                <li><a class="dropdown-item @(Vm.SearchMode == Ix.Base.Data.eSearchMode.Exact ? "active" : "")" @onclick="@(() => Vm.SearchMode = Ix.Base.Data.eSearchMode.Exact)">Exact</a></li>
+                <li><a class="dropdown-item @(Vm.SearchMode == Ix.Base.Data.eSearchMode.Contains ? "active" : "")" @onclick="@(() => Vm.SearchMode = Ix.Base.Data.eSearchMode.Contains)">Contains</a></li>
+                <li><a class="dropdown-item @(Vm.SearchMode == Ix.Base.Data.eSearchMode.StartsWith ? "active" : "")" @onclick="@(() => Vm.SearchMode = Ix.Base.Data.eSearchMode.StartsWith)">Starts With</a></li>
             </ul>
         </div>
         <form class="d-flex" role="search">
@@ -27,7 +28,7 @@ else
             <button class="btn btn-secondary" type="button" name="paginationSwitch" aria-label="Hide/Show pagination" title="Hide/Show pagination">
                 <i class="oi oi-caret-bottom"></i>
             </button>
-            <button class="btn btn-secondary" type="button" name="refresh" aria-label="Refresh" title="Refresh">
+            <button class="btn btn-secondary" type="button" name="refresh" aria-label="Refresh" title="Refresh" @onclick="@(() => Vm.FillObservableRecords())">
                 <i class="oi oi-loop-circular"></i>
             </button>
         </div>
@@ -66,39 +67,67 @@ else
     </table>
     <div class="d-flex">
         <div class="dropdown">
-            Showing 1 to 10 of 792 rows
-            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">5</button>
+            Showing @(((Vm.Page + 1) * Vm.Limit) - @Vm.Limit + 1) to @(((Vm.Page + 1) * Vm.Limit) > Vm.Records.Count ? Vm.Records.Count : ((Vm.Page + 1) * Vm.Limit)) of @Vm.Records.Count rows
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">@Vm.Limit</button>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item active">5</a></li>
-                <li><a class="dropdown-item">10</a></li>
-                <li><a class="dropdown-item">25</a></li>
-                <li><a class="dropdown-item">50</a></li>
-                <li><a class="dropdown-item">100</a></li>
-                <li><a class="dropdown-item">All</a></li>
+                <li><a class="dropdown-item @(Vm.Limit == 5 ? "active" : "")" @onclick="@(() => @Vm.Limit = 5)">5</a></li>
+                <li><a class="dropdown-item @(Vm.Limit == 10 ? "active" : "")" @onclick="@(() => @Vm.Limit = 10)">10</a></li>
+                <li><a class="dropdown-item @(Vm.Limit == 25 ? "active" : "")" @onclick="@(() => @Vm.Limit = 25)">25</a></li>
+                <li><a class="dropdown-item @(Vm.Limit == 50 ? "active" : "")" @onclick="@(() => @Vm.Limit = 50)">50</a></li>
+                <li><a class="dropdown-item @(Vm.Limit == 100 ? "active" : "")" @onclick="@(() => @Vm.Limit = 100)">100</a></li>
+                <li><a class="dropdown-item @(Vm.Limit == 999 ? "active" : "")" @onclick="@(() => @Vm.Limit = 999)">All</a></li>
             </ul>
             rows per page
         </div>
         <nav class="ms-auto">
+            @Vm.Page
+            @MaxPage
             <ul class="pagination">
-                <li class="page-item">
-                    <a class="page-link" href="#" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                    </a>
-                </li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item">
-                    <a class="page-link" href="#" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                    </a>
-                </li>
+                <li class="page-item"><a class="page-link" @onclick="@(() => Vm.Page = mod(Vm.Page - 1, MaxPage + 1))" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
+
+                @if(MaxPage < 7)
+                {
+                    @for(int i = 0; i < MaxPage + 1; i++)
+                    {
+                        <li class="page-item @(Vm.Page == i ? "active" : "")"><a class="page-link" @onclick="@(() => Vm.Page = i)">@(i + 1)</a></li>
+                    }
+                }
+                else
+                {
+                    <li class="page-item @(@Vm.Page == 0 ? "active" : "")"><a class="page-link" @onclick="@(() => Vm.Page = 0)">1</a></li>
+
+                    @if (Vm.Page < 4)
+                    {
+                        <li class="page-item @(Vm.Page == 1 ? "active" : "")"><a class="page-link" @onclick="@(() => Vm.Page = 1)">2</a></li>
+                        <li class="page-item @(Vm.Page == 2 ? "active" : "")"><a class="page-link" @onclick="@(() => Vm.Page = 2)">3</a></li>
+                        <li class="page-item @(Vm.Page == 3 ? "active" : "")"><a class="page-link" @onclick="@(() => Vm.Page = 3)">4</a></li>
+                        <li class="page-item @(Vm.Page == 4 ? "active" : "")"><a class="page-link" @onclick="@(() => Vm.Page = 4)">5</a></li>
+                        <li class="page-item disabled"><a class="page-link">...</a></li>
+                    }
+                    else if (Vm.Page > MaxPage - 4)
+                    {
+                        <li class="page-item disabled"><a class="page-link">...</a></li>
+                        <li class="page-item @(Vm.Page == @MaxPage - 4 ? "active" : "")"><a class="page-link" @onclick="@(() => Vm.Page = MaxPage - 4)">@(MaxPage - 3)</a></li>
+                        <li class="page-item @(Vm.Page == @MaxPage - 3 ? "active" : "")"><a class="page-link" @onclick="@(() => Vm.Page = MaxPage - 3)">@(MaxPage - 2)</a></li>
+                        <li class="page-item @(Vm.Page == @MaxPage - 2 ? "active" : "")"><a class="page-link" @onclick="@(() => Vm.Page = MaxPage - 2)">@(MaxPage - 1)</a></li>
+                        <li class="page-item @(Vm.Page == @MaxPage - 1 ? "active" : "")"><a class="page-link" @onclick="@(() => Vm.Page = MaxPage - 1)">@(MaxPage)</a></li>
+                    }
+                    else
+                    {
+                        <li class="page-item disabled"><a class="page-link">...</a></li>
+                        <li class="page-item @(Vm.Page == Vm.Page - 1 ? "active" : "")"><a class="page-link" @onclick="@(() => Vm.Page = Vm.Page - 1)">@(Vm.Page)</a></li>
+                        <li class="page-item @(Vm.Page == Vm.Page ? "active" : "")"><a class="page-link" @onclick="@(() => Vm.Page = Vm.Page)">@(Vm.Page + 1)</a></li>
+                        <li class="page-item @(Vm.Page == Vm.Page + 1 ? "active" : "")"><a class="page-link" @onclick="@(() => Vm.Page = Vm.Page + 1)">@(Vm.Page + 2)</a></li>
+                        <li class="page-item disabled"><a class="page-link">...</a></li>
+                    }
+
+                    <li class="page-item @(Vm.Page == @MaxPage ? "active" : "")"><a class="page-link" @onclick="@(() => Vm.Page = MaxPage)">@(MaxPage + 1)</a></li>
+                }
+
+                <li class="page-item"><a class="page-link" @onclick="@(() => Vm.Page = (Vm.Page + 1) % (MaxPage + 1))" aria-label="Next"><span aria-hidden="true">&raquo;</span></a></li>
             </ul>
         </nav>
     </div>
-
-    <button type="button" class="btn btn-primary" @onclick="() => Vm.CreateNew()">Create new item</button>
-
 }
 
 <div class="modal fade" id="createModal" tabindex="-1" aria-hidden="true">
@@ -109,11 +138,14 @@ else
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                ...
+                <div class="mb-3">
+                    <label for="name" class="form-label">Name</label>
+                    <input type="text" class="form-control" id="name">
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Create</button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" @onclick="() => Vm.CreateNew()">Create</button>
             </div>
         </div>
     </div>
@@ -127,7 +159,6 @@ else
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                ...
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -142,10 +173,18 @@ else
     [Parameter]
     public IDataViewModel Vm { get; set; }
 
+    private int MaxPage { get { return Vm.Records.Count % Vm.Limit == 0 ? Vm.Records.Count / Vm.Limit - 1 : Vm.Records.Count / Vm.Limit; } }
+
+    public int mod(int x, int m)
+    {
+        int r = x % m;
+        return r < 0 ? r + m : r;
+    }
+
     protected override Task OnInitializedAsync()
     {
         //Vm.FillObservableRecordsAsync();
-       // Vm.PropertyChanged += (sender, e) => StateHasChanged();
+        // Vm.PropertyChanged += (sender, e) => StateHasChanged();
         return base.OnInitializedAsync();
     }
 }
