--- a/src/data/src/ix.framework.data.blazor/Views/IxDataView.razor
+++ b/src/data/src/ix.framework.data.blazor/Views/IxDataView.razor
@@ -1,7 +1,10 @@
 ﻿@namespace ix.framework.data
 @using CommunityToolkit.Mvvm.ComponentModel;
+@using CommunityToolkit.Mvvm.Messaging;
 @using ix.framework.core.Interfaces;
 @using ix.framework.core.ViewModels;
+@using ix.framework.core.blazor.Toaster;
+@using ix.framework.core;
 
 <h3>IxDataView</h3>
 
@@ -22,7 +25,7 @@ else
             </ul>
         </div>
         <form class="d-flex" role="search">
-            <input class="form-control" type="search" placeholder="Search" aria-label="Search" @bind="Vm.FilterById" >
+            <input class="form-control" type="search" placeholder="Search" aria-label="Search" @bind="Vm.FilterById">
         </form>
         <div class="btn-group">
             <button class="btn btn-secondary" type="button" name="searchbutton" @onclick="() => Vm.Filter()">
@@ -56,25 +59,25 @@ else
                         </div>
                     </td>
                 </tr>
-               
+
             }
-            else if(!Vm.Records.Any())
+            else if (!Vm.Records.Any())
             {
                 <tr class="text-center">
                     <td colspan="3">
-                        <h3 >Collection is empty</h3>
+                        <h3>Collection is empty</h3>
                     </td>
                 </tr>
-                
+
             }
             else
             {
                 @foreach (var item in Vm.Records.ToList())
                 {
                     <tr class="text-center">
-                        <td data-bs-toggle="modal" href="#viewModal" @onclick="() => Vm.SelectedItemId = item.DataEntityId">@item.DataEntityId</td>
+                        <td data-bs-toggle="modal" href="#viewModal" style="cursor: pointer" @onclick="() => Vm.SelectedItemId = item.DataEntityId">@item.DataEntityId</td>
                         <td>
-                            <a class="remove cursor-pointer" title="Remove" data-bs-toggle="modal" data-bs-target="#deleteModal" @onclick="() => Vm.SelectedItemId = item.DataEntityId"><i class="oi oi-trash"></i></a>
+                            <a class="remove" style="cursor: pointer" title="Remove" data-bs-toggle="modal" data-bs-target="#deleteModal" @onclick="() => Vm.SelectedItemId = item.DataEntityId"><i class="oi oi-trash"></i></a>
                         </td>
                     </tr>
                 }
@@ -84,63 +87,63 @@ else
     </table>
     <div class="d-flex">
         <div class="dropdown">
-            Showing @(((Vm.Page + 1) * Vm.Limit) - Vm.Limit + 1) to @(((Vm.Page + 1) * Vm.Limit) > Vm.Records.Count ? Vm.Records.Count : ((Vm.Page + 1) * Vm.Limit)) of @Vm.Records.Count rows
+            Showing @(Vm.Page * Vm.Limit + 1) to @(((Vm.Page + 1) * Vm.Limit) > Vm.FilteredCount ? Vm.FilteredCount : ((Vm.Page + 1) * Vm.Limit)) of @Vm.FilteredCount rows
             <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">@Vm.Limit</button>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item @(Vm.Limit == 5 ? "active" : "")" @onclick="() => Vm.Limit = 5">5</a></li>
-                <li><a class="dropdown-item @(Vm.Limit == 10 ? "active" : "")" @onclick="() => Vm.Limit = 10">10</a></li>
-                <li><a class="dropdown-item @(Vm.Limit == 25 ? "active" : "")" @onclick="() => Vm.Limit = 25">25</a></li>
-                <li><a class="dropdown-item @(Vm.Limit == 50 ? "active" : "")" @onclick="() => Vm.Limit = 50">50</a></li>
-                <li><a class="dropdown-item @(Vm.Limit == 100 ? "active" : "")" @onclick="() => Vm.Limit = 100">100</a></li>
-                <li><a class="dropdown-item @(Vm.Limit == 999 ? "active" : "")" @onclick="() => Vm.Limit = 999">All</a></li>
+                <li><a class="dropdown-item @(Vm.Limit == 5 ? "active" : "")" style="cursor: pointer" @onclick="() => setLimitAsync(5)">5</a></li>
+                <li><a class="dropdown-item @(Vm.Limit == 10 ? "active" : "")" style="cursor: pointer" @onclick="() => setLimitAsync(10)">10</a></li>
+                <li><a class="dropdown-item @(Vm.Limit == 25 ? "active" : "")" style="cursor: pointer" @onclick="() => setLimitAsync(25)">25</a></li>
+                <li><a class="dropdown-item @(Vm.Limit == 50 ? "active" : "")" style="cursor: pointer" @onclick="() => setLimitAsync(50)">50</a></li>
+                <li><a class="dropdown-item @(Vm.Limit == 100 ? "active" : "")" style="cursor: pointer" @onclick="() => setLimitAsync(100)">100</a></li>
+                <li><a class="dropdown-item @(Vm.Limit == 999 ? "active" : "")" style="cursor: pointer" @onclick="() => setLimitAsync(999)">All</a></li>
             </ul>
             rows per page
         </div>
         <nav class="ms-auto">
             <ul class="pagination">
-                <li class="page-item"><a class="page-link" @onclick="() => Vm.Page = mod(Vm.Page - 1, MaxPage + 1)" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
+                <li class="page-item"><a class="page-link" style="cursor: pointer" @onclick="() => setPageAsync(mod(Vm.Page - 1, MaxPage + 1))" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
 
-                @if(MaxPage < 7)
+                @if (MaxPage < 7)
                 {
-                    @for(var i = 0; i < MaxPage + 1; i++)
+                    @for (var i = 0; i < MaxPage + 1; i++)
                     {
                         var j = i;
-                        <li class="page-item @(Vm.Page == i ? "active" : "")"><a class="page-link" @onclick="() => Vm.Page = j">@(i + 1)</a></li>
+                        <li class="page-item @(Vm.Page == i ? "active" : "")"><a class="page-link" style="cursor: pointer" @onclick="() => setPageAsync(j)">@(i + 1)</a></li>
                     }
                 }
                 else
                 {
-                    <li class="page-item @(Vm.Page == 0 ? "active" : "")"><a class="page-link" @onclick="() => Vm.Page = 0">1</a></li>
+                    <li class="page-item @(Vm.Page == 0 ? "active" : "")"><a class="page-link" style="cursor: pointer" @onclick="() => setPageAsync(0)">1</a></li>
 
                     @if (Vm.Page < 4)
                     {
-                        <li class="page-item @(Vm.Page == 1 ? "active" : "")"><a class="page-link" @onclick="() => Vm.Page = 1">2</a></li>
-                        <li class="page-item @(Vm.Page == 2 ? "active" : "")"><a class="page-link" @onclick="() => Vm.Page = 2">3</a></li>
-                        <li class="page-item @(Vm.Page == 3 ? "active" : "")"><a class="page-link" @onclick="() => Vm.Page = 3">4</a></li>
-                        <li class="page-item @(Vm.Page == 4 ? "active" : "")"><a class="page-link" @onclick="() => Vm.Page = 4">5</a></li>
+                        <li class="page-item @(Vm.Page == 1 ? "active" : "")"><a class="page-link" style="cursor: pointer" @onclick="() => setPageAsync(1)">2</a></li>
+                        <li class="page-item @(Vm.Page == 2 ? "active" : "")"><a class="page-link" style="cursor: pointer" @onclick="() => setPageAsync(2)">3</a></li>
+                        <li class="page-item @(Vm.Page == 3 ? "active" : "")"><a class="page-link" style="cursor: pointer" @onclick="() => setPageAsync(3)">4</a></li>
+                        <li class="page-item @(Vm.Page == 4 ? "active" : "")"><a class="page-link" style="cursor: pointer" @onclick="() => setPageAsync(4)">5</a></li>
                         <li class="page-item disabled"><a class="page-link">...</a></li>
                     }
                     else if (Vm.Page > MaxPage - 4)
                     {
                         <li class="page-item disabled"><a class="page-link">...</a></li>
-                        <li class="page-item @(Vm.Page == @MaxPage - 4 ? "active" : "")"><a class="page-link" @onclick="() => Vm.Page = MaxPage - 4">@(MaxPage - 3)</a></li>
-                        <li class="page-item @(Vm.Page == @MaxPage - 3 ? "active" : "")"><a class="page-link" @onclick="() => Vm.Page = MaxPage - 3">@(MaxPage - 2)</a></li>
-                        <li class="page-item @(Vm.Page == @MaxPage - 2 ? "active" : "")"><a class="page-link" @onclick="() => Vm.Page = MaxPage - 2">@(MaxPage - 1)</a></li>
-                        <li class="page-item @(Vm.Page == @MaxPage - 1 ? "active" : "")"><a class="page-link" @onclick="() => Vm.Page = MaxPage - 1">@(MaxPage)</a></li>
+                        <li class="page-item @(Vm.Page == @MaxPage - 4 ? "active" : "")"><a class="page-link" style="cursor: pointer" @onclick="() => setPageAsync(MaxPage - 4)">@(MaxPage - 3)</a></li>
+                        <li class="page-item @(Vm.Page == @MaxPage - 3 ? "active" : "")"><a class="page-link" style="cursor: pointer" @onclick="() => setPageAsync(MaxPage - 3)">@(MaxPage - 2)</a></li>
+                        <li class="page-item @(Vm.Page == @MaxPage - 2 ? "active" : "")"><a class="page-link" style="cursor: pointer" @onclick="() => setPageAsync(MaxPage - 2)">@(MaxPage - 1)</a></li>
+                        <li class="page-item @(Vm.Page == @MaxPage - 1 ? "active" : "")"><a class="page-link" style="cursor: pointer" @onclick="() => setPageAsync(MaxPage - 1)">@(MaxPage)</a></li>
                     }
                     else
                     {
                         <li class="page-item disabled"><a class="page-link">...</a></li>
-                        <li class="page-item @(Vm.Page == Vm.Page - 1 ? "active" : "")"><a class="page-link" @onclick="() => Vm.Page = Vm.Page - 1">@(Vm.Page)</a></li>
-                        <li class="page-item @(Vm.Page == Vm.Page ? "active" : "")"><a class="page-link" @onclick="() => Vm.Page = Vm.Page">@(Vm.Page + 1)</a></li>
-                        <li class="page-item @(Vm.Page == Vm.Page + 1 ? "active" : "")"><a class="page-link" @onclick="() => Vm.Page = Vm.Page + 1">@(Vm.Page + 2)</a></li>
+                        <li class="page-item @(Vm.Page == Vm.Page - 1 ? "active" : "")"><a class="page-link" style="cursor: pointer" @onclick="() => setPageAsync(Vm.Page - 1)">@(Vm.Page)</a></li>
+                        <li class="page-item @(Vm.Page == Vm.Page ? "active" : "")"><a class="page-link" style="cursor: pointer" @onclick="() => setPageAsync(Vm.Page)">@(Vm.Page + 1)</a></li>
+                        <li class="page-item @(Vm.Page == Vm.Page + 1 ? "active" : "")"><a class="page-link" style="cursor: pointer" @onclick="() => setPageAsync(Vm.Page + 1)">@(Vm.Page + 2)</a></li>
                         <li class="page-item disabled"><a class="page-link">...</a></li>
                     }
 
-                    <li class="page-item @(Vm.Page == @MaxPage ? "active" : "")"><a class="page-link" @onclick="() => Vm.Page = MaxPage">@(MaxPage + 1)</a></li>
+                    <li class="page-item @(Vm.Page == @MaxPage ? "active" : "")"><a class="page-link" style="cursor: pointer" @onclick="() => setPageAsync(MaxPage)">@(MaxPage + 1)</a></li>
                 }
 
-                <li class="page-item"><a class="page-link" @onclick="() => Vm.Page = (Vm.Page + 1) % (MaxPage + 1)" aria-label="Next"><span aria-hidden="true">&raquo;</span></a></li>
+                <li class="page-item"><a class="page-link" style="cursor: pointer" @onclick="() => setPageAsync((Vm.Page + 1) % (MaxPage + 1))" aria-label="Next"><span aria-hidden="true">&raquo;</span></a></li>
             </ul>
         </nav>
     </div>
@@ -229,16 +232,41 @@ else
     [Parameter]
     public IDataViewModel Vm { get; set; }
 
-    private int MaxPage { get { return Vm.Records.Count % Vm.Limit == 0 ? Vm.Records.Count / Vm.Limit - 1 : Vm.Records.Count / Vm.Limit; } }
+    [Inject]
+    private ToastService toastService { get; set; }
 
-    public int mod(int x, int m)
+    private int MaxPage { get { return (int)(Vm.FilteredCount % Vm.Limit == 0 ? Vm.FilteredCount / Vm.Limit - 1 : Vm.FilteredCount / Vm.Limit); } }
+
+    private int mod(int x, int m)
     {
         int r = x % m;
         return r < 0 ? r + m : r;
     }
 
+    private async Task setLimitAsync(int limit)
+    {
+        int oldLimit = Vm.Limit;
+        Vm.Limit = limit;
+
+        Vm.Page = (Vm.Page * oldLimit) / Vm.Limit;
+
+        await Vm.FillObservableRecordsAsync();
+    }
+
+    private async Task setPageAsync(int page)
+    {
+        Vm.Page = page;
+
+        await Vm.FillObservableRecordsAsync();
+    }
+
     protected override async Task OnInitializedAsync()
     {
         await Vm.FillObservableRecordsAsync();
+
+        //WeakReferenceMessenger.Default.Register<ToastMessage>(this, (r, m) =>
+        //{
+        //    toastService.AddToast(m.Value);
+        //});
     }
 }
